--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -14,49 +14,14 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-
-// .dhruba {
-//   /* animation properties */
-//   animation-name: my-animation;
-//   animation-duration: 2s;
-//   animation-direction: alternate;
-//   animation-iteration-count: infinite;
-//   animation-timing-function: linear;
-  
-//   /* other properties */
-//   width: 300px;
-//   height: 100px;
-//   border-radius: 10px;
-//   position: absolute;
-//   left: 0; 
-//   right: 0; 
-//   margin-left: auto;
-//   margin-right: auto; 
-
-// }
-
-// @keyframes my-animation {
-//   from {
-//     background-color: #ff7a59;
-//     width: 300px;
-//     top: 10px;
-//   }
-//   to {
-//     background-color: #33475b;
-//     width: 50px;
-//     top: 100px;
-//   }
-// }
-
-
-
+body {
+  // color: white;
+  // background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
